--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "bower install"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/tuxedo25/orderly/issues"
   },
-  "homepage": "https://github.com/tuxedo25/orderly"
+  "homepage": "https://github.com/tuxedo25/orderly",
+  "dependencies": {
+    "bower": "^1.3.12",
+    "express": "^4.12.0"
+  }
 }
