--- a/bower.json
+++ b/bower.json
@@ -16,14 +16,13 @@
   "dependencies": {
     "webcomponentsjs": "~0.5.5",
     "polymer": "~0.5.5",
-    "core-ajax": "Polymer/core-ajax#~0.5.5",
-    "core-list": "Polymer/core-list#~0.5.5",
-    "core-scaffold": "Polymer/core-scaffold#~0.5.5",
-    "core-menu": "Polymer/core-menu#~0.5.5",
-    "core-item": "Polymer/core-item#~0.5.5",
-    "core-pages": "Polymer/core-pages#~0.5.5",
     "page": "~1.6.1",
+    "core-ajax": "Polymer/core-ajax#~0.5.5",
+    "core-header-panel": "Polymer/core-header-panel#~0.5.5",
     "core-icons": "Polymer/core-icons#~0.5.5",
-    "core-icon-button": "Polymer/core-icon-button#~0.5.5"
+    "core-icon-button": "Polymer/core-icon-button#~0.5.5",
+    "core-list": "Polymer/core-list#~0.5.5",
+    "core-resizable": "Polymer/core-resizable#~0.5.5",
+    "core-toolbar": "Polymer/core-toolbar#~0.5.5"
   }
 }
